<resources>
    <string name="app_name">GoldtekFaceDemo</string>
    <string name="label_main">Demo V1.0</string>
    <string name="title_name">Face Recognition Demo</string>

    <!-- UI Elements -->
    <string name="btn_capture">Click</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_register">Register</string>
    <string name="btn_identify">Identify</string>
    <string name="btn_setting">Setting</string>
    <string name="dialog_pass">Pass</string>
    <string name="dialog_fail">Fail</string>
    <string name="radio_cascade_sample">Sample</string>
    <string name="radio_cascade_win">Haar</string>
    <string name="radio_cascade_rockchip">Rockchip</string>
    <string name="radio_protocol_pytensor_img">TensorImg</string>
    <string name="radio_protocol_pytensor_fv">TensorFV</string>
    <string name="radio_protocol_lbph">LBPH</string>
    <string name="radio_protocol_lbphist">LBPHIST</string>


    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>

    <string name="unreachable_recognition_server">Cannot Connect to Server!</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="msg_welcome">Welcome!!</string>

    <!-- About -->
    <string name="about">Information</string>
    <string name="aboutName">GTSW_FaceDemo</string>
    <string name="aboutVersion">Version 1.0.0.1</string>
    <string name="aboutDate">2018/01/08</string>
    <string name="aboutCopyright">Copyright &#169; 2018-2020</string>
    <string name="aboutCompany">GOLDT<i>e</i>k Technology Co Ltd.\nAll Rights Reserved</string>
    <string name="aboutWeb">http://www.goldtek.com/</string>

</resources>
