<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/lytAbout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logoSize"
        android:layout_height="@dimen/logoSize"
        android:padding="@dimen/modeButtonPadding1"
        android:src="@drawable/goldtek"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/aboutName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutVersion"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutDate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutCopyright" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutCompany" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutWeb"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingTop="20dp"/>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/modeButtonPadding"
        android:background="@drawable/btn_background"
        android:text="OK"
        android:textColor="@color/white"
        android:layout_weight="0.08" />


</LinearLayout>