<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_metal"
    tools:context="com.goldtek.demo.logistics.face.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.dd.CircularProgressButton
            android:id="@+id/Register"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_cornerRadius="32dp"
            app:cpb_selectorIdle="@drawable/main_btn_selector"
            app:cpb_textIdle="@string/btn_register" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.dd.CircularProgressButton
            android:id="@+id/Identify"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_cornerRadius="32dp"
            app:cpb_selectorIdle="@drawable/main_btn_selector"
            app:cpb_textIdle="@string/btn_identify" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.dd.CircularProgressButton
            android:id="@+id/SettingServer"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_cornerRadius="32dp"
            app:cpb_selectorIdle="@drawable/main_btn_selector"
            app:cpb_textIdle="@string/btn_setting" />
    </RelativeLayout>

    <!--<com.github.ybq.android.spinkit.SpinKitView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/spin_kit"-->
        <!--style="@style/SpinKitView.Small.Wave"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_gravity="center"-->
        <!--app:SpinKit_Color="@color/colorAccent" />-->
</LinearLayout>
